--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,82 +15,90 @@
         rel="stylesheet">
 </head>
 <body class="alert">
-    <header>
-        <a class="logo" href="./index.html">Web<span class="logo-studio">Studio</span></a>
-        <nav>
-            <ul class="nav-list">
-                <li><a class="nav-items" href="./index.html">Studio</a></li>
-                <li><a class="nav-items-active" href="./portfolio.html">Portfolio</a></li>
-                <li><a class="nav-items" href="">Contacts</a></li>
-            </ul>
-        </nav>
-        <address>
-            <ul class="adress-list">
-                <li><a class="adress-items" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="adress-items" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-            </ul>
-        </address>
+    <header class="header">
+        <div class="header-container container"> 
+            <a class="logo" href="./index.html">Web<span class="logo-studio">Studio</span></a>   
+            <nav class="header-nav">
+                <ul class="nav-list">
+                    <li><a class="nav-items" href="./index.html">Studio</a></li>
+                    <li><a class="nav-items-active" href="./portfolio.html">Portfolio</a></li>
+                    <li><a class="nav-items" href="">Contacts</a></li>
+                </ul>
+            </nav>
+            <address>
+                <ul class="adress-list">
+                    <li><a class="adress-items" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a class="adress-items" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                </ul>
+            </address>
+        </div>
     </header>
     <!-- filter -->
     <section>
-        <ul class="filter-list">
-            <li><button class="filter-btn" type="button">All</button></li>
-            <li><button class="filter-btn" type="button">Web Site</button></li>
-            <li><button class="filter-btn" type="button">App</button></li>
-            <li><button class="filter-btn" type="button">Design</button></li>
-            <li><button class="filter-btn" type="button">Marketing</button></li>
-        </ul>
-        <ul class="row-list">
-            <li class="row-items">
-                <img src="./images/row1/img2.jpg" alt="banking app interface concept" width="360" height="300">
-                <h3 class="row-subtitle">Banking App Interface Concept</h3>
-                <p class="row-text">App</p>
-            </li>
-            <li class="row-items">
-                <img src="./images/row1/img1.jpg" alt="cashless payment" width="360" height="300">
-                <h3 class="row-subtitle">Cashless Payment</h3>
-                <p class="row-text">Marketing</p>
-            </li>
-            <li class="row-items">
-                <img src="./images/row1/img.jpg" alt="meditaion app" width="360" height="300">
-                <h3 class="row-subtitle">Meditaion App</h3>
-                <p class="row-text">App</p>
-            </li>
-            <li class="row-items">
-                <img src="./images/row2/img-2.jpg" alt="taxi service" width="360" height="300">
-                <h3 class="row-subtitle">Taxi Service</h3>
-                <p class="row-text">Marketing</p>
-            </li>
-            <li class="row-items">
-                <img src="./images/row2/img-1.jpg" alt="screen illustrations" width="360" height="300">
-                <h3 class="row-subtitle">Screen Illustrations</h3>
-                <p class="row-text">Design</p>
-            </li>
-            <li class="row-items">
-                <img src="./images/row2/img.jpg" alt="online courses" width="360" height="300">
-                <h3 class="row-subtitle">Online Courses</h3>
-                <p class="row-text">Marketing</p>
-            </li>
-            <li class="row-items">
-                <img src="./images/row3/img-2.jpg" alt="instagram stories concept" width="360" height="300">
-                <h3 class="row-subtitle">Instagram Stories Concept</h3>
-                <p class="row-text">Design</p>
-            </li>
-            <li class="row-items">
-                <img src="./images/row3/img-1.jpg" alt="organic food" width="360" height="300">
-                <h3 class="row-subtitle">Organic Food</h3>
-                <p class="row-text">Web Site</p>
-            </li>
-            <li class="row-items">
-                <img src="./images/row3/img.jpg" alt="fresh coffee" width="360" height="300">
-                <h3 class="row-subtitle">Fresh Coffee</h3>
-                <p class="row-text">Web SIte</p>
-            </li>
-        </ul>
+        <div class="container">
+            <ul class="filter-list">
+                <li><button class="filter-btn" type="button">All</button></li>
+                <li><button class="filter-btn" type="button">Web Site</button></li>
+                <li><button class="filter-btn" type="button">App</button></li>
+                <li><button class="filter-btn" type="button">Design</button></li>
+                <li><button class="filter-btn" type="button">Marketing</button></li>
+            </ul>
+        </div>
+        <div class="container filter-container">
+            <ul class="row-list">
+                <li class="row-items">
+                    <img src="./images/row1/img2.jpg" alt="banking app interface concept" width="360" height="300">
+                    <h3 class="row-subtitle">Banking App Interface Concept</h3>
+                    <p class="row-text">App</p>
+                </li>
+                <li class="row-items">
+                    <img src="./images/row1/img1.jpg" alt="cashless payment" width="360" height="300">
+                    <h3 class="row-subtitle">Cashless Payment</h3>
+                    <p class="row-text">Marketing</p>
+                </li>
+                <li class="row-items">
+                    <img src="./images/row1/img.jpg" alt="meditaion app" width="360" height="300">
+                    <h3 class="row-subtitle">Meditaion App</h3>
+                    <p class="row-text">App</p>
+                </li>
+                <li class="row-items">
+                    <img src="./images/row2/img-2.jpg" alt="taxi service" width="360" height="300">
+                    <h3 class="row-subtitle">Taxi Service</h3>
+                    <p class="row-text">Marketing</p>
+                </li>
+                <li class="row-items">
+                    <img src="./images/row2/img-1.jpg" alt="screen illustrations" width="360" height="300">
+                    <h3 class="row-subtitle">Screen Illustrations</h3>
+                    <p class="row-text">Design</p>
+                </li>
+                <li class="row-items">
+                    <img src="./images/row2/img.jpg" alt="online courses" width="360" height="300">
+                    <h3 class="row-subtitle">Online Courses</h3>
+                    <p class="row-text">Marketing</p>
+                </li>
+                <li class="row-items">
+                    <img src="./images/row3/img-2.jpg" alt="instagram stories concept" width="360" height="300">
+                    <h3 class="row-subtitle">Instagram Stories Concept</h3>
+                    <p class="row-text">Design</p>
+                </li>
+                <li class="row-items">
+                    <img src="./images/row3/img-1.jpg" alt="organic food" width="360" height="300">
+                    <h3 class="row-subtitle">Organic Food</h3>
+                    <p class="row-text">Web Site</p>
+                </li>
+                <li class="row-items">
+                    <img src="./images/row3/img.jpg" alt="fresh coffee" width="360" height="300">
+                    <h3 class="row-subtitle">Fresh Coffee</h3>
+                    <p class="row-text">Web Site</p>
+                </li>
+            </ul>
+        </div>
     </section>
     <footer class="ftr">
-        <a class="ftr-logo" href="./index.html">Web<span class="ftr-logo-studio">Studio</span></a>
-        <p class="ftr-text">Increase the flow of customers and sales for your business with digital marketing & growth
-            solutions.</p>
+        <div class="container footer-container"> 
+            <a class="ftr-logo" href="./index.html">Web<span class="ftr-logo-studio">Studio</span></a>
+            <p class="ftr-text">Increase the flow of customers and sales for your business with digital marketing & growth
+                solutions.</p>
+        </div>
     </footer>
 </body>
