--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
-    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,21 +43,21 @@
     </section>
     <!-- section 1 -->
     <section>
-        <div class="container sct-container">
+        <div class="container sct-frst-container">
             <ul class="sct-frs-list">
-                <li>
+                <li class="sct-frs-items">
                     <h3 class="sct-subtitle">Strategy</h3> 
                     <p class="sct-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
-                <li>
+                <li class="sct-frs-items">
                     <h3 class="sct-subtitle">Punctuality</h3>
                     <p class="sct-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
-                <li>
+                <li class="sct-frs-items">
                     <h3 class="sct-subtitle">Diligence</h3>
                     <p class="sct-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
-                <li>
+                <li class="sct-frs-items">
                     <h3 class="sct-subtitle">Technologies</h3>
                     <p class="sct-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
@@ -64,8 +66,8 @@
     </section>
     <!-- section 2 -->
     <section>
-        <h2 class="sct-title">What are we doing</h2>
-        <div class="container">
+        <div class="container sct-scnd-container">
+            <h2 class="sct-title">What are we doing</h2>
             <ul class="img-list">
                 <li>
                     <img src="./images/section1/rectangle71-2.jpg" alt="computer websites" width="360" height="300">
@@ -81,28 +83,28 @@
     </section>
     <!-- section 3 -->
     <section class="sct-team">
-        <h2 class="sct-title-team">Our Team</h2>
-        <div class="container"> 
+        <div class="container sct-thrd-container">
+            <h2 class="sct-title-team">Our Team</h2> 
             <ul class="sct-list">
                 <li class="sct-items">
                     <img src="./images/team/img-3.jpg" alt="Mark Guerrero product designer" width="264" height="260">
                     <h3 class="sct-subtitle-team">Mark Guerrero</h3>
-                    <p class="sct-text">Product Designer</p>
+                    <p class="sct-text-team">Product Designer</p>
                 </li>
                 <li class="sct-items">
                     <img src="./images/team/img-2.jpg" alt="Tom Ford frontend developer" width="264" height="260">
                     <h3 class="sct-subtitle-team">Tom Ford</h3>
-                    <p class="sct-text">Frontend Developer</p>
+                    <p class="sct-text-team">Frontend Developer</p>
                 </li>
                 <li class="sct-items">
                     <img src="./images/team/img-1.jpg" alt="Camila Garcia marketing" width="264" height="260">
                     <h3 class="sct-subtitle-team">Camila Garcia</h3>
-                    <p class="sct-text">Marketing</p>
+                    <p class="sct-text-team">Marketing</p>
                 </li>
                 <li class="sct-items">
                     <img src="./images/team/img.jpg" alt="Daniel Wilson UI designer" width="264" height="260">
                     <h3 class="sct-subtitle-team">Daniel Wilson</h3>
-                    <p class="sct-text">UI Designer</p>
+                    <p class="sct-text-team">UI Designer</p>
                 </li>
             </ul>
         </div>
