--- a/index.html
+++ b/index.html
@@ -42,12 +42,13 @@
         </div>
     </section>
     <!-- section 1 -->
-    <section>
+    <section class="sct-frst">
         <div class="container sct-frst-container">
             <ul class="sct-frs-list">
                 <li class="sct-frs-items">
                     <h3 class="sct-subtitle">Strategy</h3> 
-                    <p class="sct-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+                    <p class="sct-text">Our goal is to identify the business
+                    problem to walk away with the perfect and creative solution.</p>
                 </li>
                 <li class="sct-frs-items">
                     <h3 class="sct-subtitle">Punctuality</h3>
