--- a/portfolio.html
+++ b/portfolio.html
@@ -36,8 +36,8 @@
         </div>
     </header>
     <!-- filter -->
-    <section>
-        <div class="container">
+    <section class="filter-sct">
+        <div class="container filter-container">
             <ul class="filter-list">
                 <li><button class="filter-btn" type="button">All</button></li>
                 <li><button class="filter-btn" type="button">Web Site</button></li>
@@ -45,8 +45,6 @@
                 <li><button class="filter-btn" type="button">Design</button></li>
                 <li><button class="filter-btn" type="button">Marketing</button></li>
             </ul>
-        </div>
-        <div class="container filter-container">
             <ul class="row-list">
                 <li class="row-items">
                     <img src="./images/row1/img2.jpg" alt="banking app interface concept" width="360" height="300">
